# garmin-mcp

./: README.md  auth.py  install.sh  pyproject.toml  requirements.txt  server.py
