[project]
name = "garmin-mcp"
version = "0.1.0"
description = "MCP server exposing python-garminconnect as ~95 tools over stdio."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "garminconnect>=0.3.2",
    "curl_cffi>=0.7",
]

[project.scripts]
garmin-mcp = "server:main"
garmin-mcp-auth = "auth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py", "auth.py"]

[tool.hatch.build.targets.wheel.sources]
"server.py" = "server.py"
"auth.py" = "auth.py"
